--- a/app/src/main/res/layout/activity_timerpage.xml
+++ b/app/src/main/res/layout/activity_timerpage.xml
@@ -6,6 +6,72 @@
     android:layout_height="match_parent"
     tools:context=".TimerPage">
 
+    <NumberPicker
+        android:id="@+id/numpicker_hours"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="40dp"
+        android:descendantFocusability="blocksDescendants"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </NumberPicker>
+
+    <NumberPicker
+        android:id="@+id/numpicker_seconds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:descendantFocusability="blocksDescendants"
+        app:layout_constraintStart_toEndOf="@+id/numpicker_minutes"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </NumberPicker>
+
+    <TextView
+        android:id="@+id/textView_seconds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
+        android:text="seconds"
+        app:layout_constraintStart_toEndOf="@+id/textView_minutes"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_minutes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="20dp"
+        android:text="minutes"
+        app:layout_constraintStart_toEndOf="@+id/textView_hours"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_hours"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="20dp"
+        android:text="hours"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <NumberPicker
+        android:id="@+id/numpicker_minutes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:descendantFocusability="blocksDescendants"
+        app:layout_constraintStart_toEndOf="@+id/numpicker_hours"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </NumberPicker>
+
     <TextView
         android:id="@+id/countdown_text"
         android:layout_width="wrap_content"
@@ -17,18 +83,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/timer_input_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="set"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.175" />
 
     <Button
         android:id="@+id/countdown_btn"
@@ -53,45 +107,8 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible" />
 
-    <EditText
-        android:id="@+id/timer_input_text_minutes"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:ems="10"
-        android:hint="min"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.31"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/timer_input_text_seconds"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:ems="10"
-        android:hint="sec"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/timer_input_text_hours"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:clickable="false"
-        android:ems="10"
-        android:hint="hour"
-        android:inputType="number"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
